--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -46,6 +46,16 @@ services:
     depends_on:
       - postgres
 
+  redis:
+    image: redis:alpine
+    container_name: clienthub-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
+
 volumes:
   postgres_data:
   ollama_data:
+  redis_data:
