chore(build): upgrade Lombok for Java 21
- Upgrade Lombok 1.18.30 → 1.18.34
- Disable annotation processors in common module

Related to CHDEV-19

--- a/client-hub-common/pom.xml
+++ b/client-hub-common/pom.xml
@@ -30,4 +30,17 @@
             <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <!-- Disable annotation processors - common module không cần Lombok/MapStruct -->
+                    <proc>none</proc>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
