--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,40 @@
-# Database Configuration
+# ============================================================================
+# Client Hub Backend - Environment Variables
+# ============================================================================
+# Copy this file to .env and update values for your environment
+# DO NOT commit .env file to version control
+# ============================================================================
+
+# Database Configuration (PostgreSQL)
 DB_NAME=clienthub
 DB_USER=postgres
 DB_PASS=password
 DB_HOST=localhost
 DB_PORT=5432
 
+# Redis Cache Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=redis_password
+
 # AI Service (Ollama)
 OLLAMA_URL=http://localhost:11434
 
-# Redis Cache
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# PgAdmin Configuration
+PGADMIN_EMAIL=admin@clienthub.com
+PGADMIN_PASSWORD=admin
 
 # Spring Boot Configuration
 SPRING_PROFILES_ACTIVE=dev
 SERVER_PORT=8080
 
-# JWT Secret (Change this in production!)
-JWT_SECRET=your-secret-key-change-this-in-production
+# JWT Configuration (Change in production!)
+JWT_SECRET=your-secret-key-change-this-in-production-minimum-256-bits
 JWT_EXPIRATION=86400000
 
-# CORS (Frontend URL)
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+# CORS Configuration (Frontend URLs)
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# PgAdmin
-PGADMIN_EMAIL=admin@clienthub.com
-PGADMIN_PASSWORD=admin
+# Logging Level
+LOGGING_LEVEL_ROOT=INFO
+LOGGING_LEVEL_COM_CLIENTHUB=DEBUG
