--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,23 +1,32 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:15-alpine
     container_name: clienthub-db
-    ports:
-      - "5432:5432"
+    env_file:
+      - .env
     environment:
       POSTGRES_DB: ${DB_NAME:-clienthub}
       POSTGRES_USER: ${DB_USER:-postgres}
       POSTGRES_PASSWORD: ${DB_PASS:-password}
+      POSTGRES_INITDB_ARGS: "-E UTF8 --locale=en_US.UTF-8"
+    ports:
+      - "${DB_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: always
+      - ./init.sql:/docker-entrypoint-initdb.d/01-init.sql
+    networks:
+      - clienthub-network
+    restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-clienthub}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
 
   ollama:
     image: ollama/ollama:latest
@@ -26,36 +35,74 @@ services:
       - "11434:11434"
     volumes:
       - ollama_data:/root/.ollama
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+    networks:
+      - clienthub-network
     restart: unless-stopped
+    # GPU support - remove if no GPU available
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - driver: nvidia
+    #           count: 1
+    #           capabilities: [gpu]
 
   pgadmin:
     image: dpage/pgadmin4
     container_name: clienthub-pgadmin
+    env_file:
+      - .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@clienthub.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
     ports:
       - "5050:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@clienthub.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - clienthub-network
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:80/misc/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
   redis:
-    image: redis:alpine
+    image: redis:7-alpine
     container_name: clienthub-redis
+    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password} --appendonly yes
+    env_file:
+      - .env
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
-    restart: always
+    networks:
+      - clienthub-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+networks:
+  clienthub-network:
+    driver: bridge
 
 volumes:
   postgres_data:
+    driver: local
   ollama_data:
+    driver: local
   redis_data:
+    driver: local
+  pgadmin_data:
+    driver: local
