--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-HELP.md
+# Maven
 target/
-.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# Build artifacts
+*.class
+*.log
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Compiled class files
+hs_err_pid*
+replay_pid*
+
+### Spring Tool Suite ###
 .apt_generated
 .classpath
 .factorypath
@@ -31,4 +45,53 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Environment Variables (SECRETS)
 .env
+.env.local
+.env.*.local
+application-prod.properties
+application-production.properties
+*.secret
+
+# Keys & Certificates (SECRETS)
+*.key
+*.pem
+*.p12
+*.jks
+*.pfx
+*.crt
+*.csr
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+
+# Package Files
+*.dmg
+*.pkg
+*.deb
+*.rpm
+
+# Documentation (keep essential docs)
+!README.md
+!DOCKER.md
+!HELP.md
+!CONTRIBUTING.md
+!LICENSE.md
