chore(config): enhance gitignore and application configuration
- Update .gitignore to block README.md and HELP.md from tracking
- Add comprehensive database and JPA/Hibernate configuration
- Configure detailed logging for development (SQL + Hibernate)
- Add spring-boot-starter-validation dependency
- Disable annotation processing in maven-compiler-plugin

Refs: CHDEV-25

--- a/.gitignore
+++ b/.gitignore
@@ -89,9 +89,10 @@ local.properties
 *.deb
 *.rpm
 
-# Documentation (keep essential docs)
-!README.md
-!DOCKER.md
-!HELP.md
-!CONTRIBUTING.md
-!LICENSE.md
+# Documentation (optional - uncomment to keep specific docs)
+# !DOCKER.md
+# !CONTRIBUTING.md
+# !LICENSE.md
+
+README.md
+HELP.md
