--- a/client-hub-api/src/main/resources/application.properties
+++ b/client-hub-api/src/main/resources/application.properties
@@ -1,9 +1,26 @@
+# Application Name
 spring.application.name=client-hub-backend
 
+# Server Configuration
+server.port=8080
+
+# Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/clienthub
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-server.port=8080
+# Enable Hibernate filter for tenant isolation
+spring.jpa.properties.hibernate.session.events.auto=true
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.clienthub=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
