feat(auth): implement JWT token provider and enum
- Add JJWT dependencies (jjwt-api, jjwt-impl, jjwt-jackson)
- Implement JwtTokenProvider with token generation and validation
- Create TokenType enum to replace hard-coded strings
- Add comprehensive unit tests (9 tests passed)
- Configure JWT properties in application.properties
- Update .env.example with JWT secret generation guide
- Upgrade Lombok from 1.18.34 to 1.18.36 for Java 21 compatibility

Implements: CHDEV-36
Related: CHDEV-34

--- a/client-hub-api/src/main/resources/application.properties
+++ b/client-hub-api/src/main/resources/application.properties
@@ -24,3 +24,10 @@ logging.level.root=INFO
 logging.level.com.clienthub=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:default_secret_key_must_be_at_least_32_characters_long_for_hs256_algorithm}
+jwt.expiration=900000
+# 15 minutes in milliseconds
+jwt.refresh-expiration=86400000
+# 24 hours in milliseconds
