--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,13 @@ SPRING_PROFILES_ACTIVE=dev
 SERVER_PORT=8080
 
 # JWT Configuration (Change in production!)
-JWT_SECRET=your-secret-key-change-this-in-production-minimum-256-bits
-JWT_EXPIRATION=86400000
+# CRITICAL: Must be at least 32 characters (256 bits) for HS256 algorithm
+# Generate secure key: openssl rand -base64 32
+JWT_SECRET=your-secret-key-change-this-in-production-minimum-32-characters-for-hs256
+JWT_EXPIRATION=900000
+# Access token: 15 minutes (in milliseconds)
+JWT_REFRESH_EXPIRATION=86400000
+# Refresh token: 24 hours (in milliseconds)
 
 # CORS Configuration (Frontend URLs)
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
