--- a/client-hub-core/pom.xml
+++ b/client-hub-core/pom.xml
@@ -44,6 +44,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        
+        <!-- JWT Token Generation & Validation -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -52,7 +66,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <!-- Disable annotation processing to avoid Lombok/Java 21 issues -->
+                    <!-- Disable annotation processing - no Lombok code in this module yet -->
+                    <!-- Will re-enable when adding domain entities with @Data, @Builder, etc. -->
                     <proc>none</proc>
                 </configuration>
             </plugin>
