--- a/client-hub-core/pom.xml
+++ b/client-hub-core/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>client-hub-core</artifactId>
 
     <dependencies>
-        <!-- Phụ thuộc vào Common -->
         <dependency>
             <groupId>com.clienthub</groupId>
             <artifactId>client-hub-common</artifactId>
@@ -43,6 +42,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!-- Spring Security  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
         <!-- JWT Token Generation & Validation -->
