refactor(auth): improve JWT authentication filter
- Add TokenType validation (only accept ACCESS tokens)
- Implement early return pattern for better readability
- Add specific exception handling (JwtException, IllegalArgumentException)
- Improve logging with userId and tokenType information
- Add comments explaining authentication flow

Security: Prevents REFRESH_TOKEN from being used for API authentication
Implements: CHDEV-68

--- a/client-hub-core/pom.xml
+++ b/client-hub-core/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!-- Web (Required for Jakarta Servlet API: HttpServletRequest, HttpServletResponse, FilterChain) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!-- Spring Security  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
