fix(security): add production-ready security enhancements
New Components:
- Add JwtAuthenticationEntryPoint (custom 401 handler)
- Add JwtAccessDeniedHandler (custom 403 handler)

JwtAuthenticationFilter improvements:
- Add authentication check to prevent redundant DB queries
- Add specific catch for UsernameNotFoundException
- Improve error logging with user context

SecurityConfig improvements:
- Integrate custom exception handlers (401/403)
- Add security headers (X-Frame-Options: DENY)
- Environment-based CORS configuration with @Value
- Support multiple environments (dev/staging/prod)

Configuration:
- Add cors.allowed-origins to application.properties
- Default to localhost development ports

Security Impact:
- Clear JSON error responses for auth failures
- Performance: Skip re-authentication if already authenticated
- Production-ready: Environment-based configuration

Implements: CHDEV-38

--- a/client-hub-core/src/main/resources/application.properties
+++ b/client-hub-core/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=8080
+
+# CORS Configuration (comma-separated list)
+# Development: localhost ports
+# Production: Add your deployed frontend URLs
+cors.allowed-origins=http://localhost:3000,http://localhost:5173
