chore: Configure Spring Boot for multi-tenant setup with Flyway
Application configuration:
- Move application.properties from core to api module (single source of truth)
- Use environment variables: DB_HOST, DB_NAME, DB_USER, DB_PASS
- Change ddl-auto from 'update' to 'validate' (Flyway manages schema)
- Enable Flyway with baseline-on-migrate=false, validate-on-migrate=true
- Add HikariCP connection pool settings
- Set open-in-view=false for better performance
- Add detailed logging for SQL and Hibernate

Spring Boot setup:
- Add @EnableJpaRepositories for core.repository package
- Add @EntityScan for core.domain.entity package
- Add client-hub-common dependency to core module pom.xml
- Add flyway-database-postgresql dependency
- Add spring-boot-starter-test for testing

This prepares the application for Flyway-managed database migrations
and proper multi-module Spring Boot architecture.

--- a/client-hub-api/src/main/resources/application.properties
+++ b/client-hub-api/src/main/resources/application.properties
@@ -5,19 +5,29 @@ spring.application.name=client-hub-backend
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/clienthub
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:clienthub}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection Pool (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
 
-# Enable Hibernate filter for tenant isolation
-spring.jpa.properties.hibernate.session.events.auto=true
+# Flyway Database Migration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=false
+spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-on-migrate=true
+spring.flyway.out-of-order=false
 
 # Logging Configuration
 logging.level.root=INFO
