--- a/client-hub-core/pom.xml
+++ b/client-hub-core/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>com.clienthub</groupId>
             <artifactId>client-hub-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!-- Database & JPA -->
@@ -30,6 +31,16 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!-- Mapping -->
@@ -69,6 +80,7 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
