feat(security): propagate tenant context from JWT authentication
- Extract tenantId from JWT token in JwtAuthenticationFilter
- Set TenantContext with tenantId for each authenticated request
- Add ThreadLocal cleanup in finally block to prevent memory leak
- Include tenantId in login response for client awareness.

--- a/client-hub-api/src/main/resources/application.properties
+++ b/client-hub-api/src/main/resources/application.properties
@@ -41,3 +41,4 @@ jwt.expiration=900000
 # 15 minutes in milliseconds
 jwt.refresh-expiration=86400000
 # 24 hours in milliseconds
+app.jwt.refresh-expiration-ms=604800000
