fix(auth): resolve login and registration issues for RBAC >> >> - Add findByEmailIgnoringTenant() to bypass tenant filter during login >> - Set tenantId when registering new users >> - Update Role enum to use ADMIN, CLIENT, FREELANCER >> - Update CustomUserDetailsService to use native query for auth >> - Change database port to 5433 to avoid conflict with local PostgreSQL >> - Update test cases to use new Role enum values

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,10 +7,10 @@ services:
     environment:
       POSTGRES_DB: ${DB_NAME:-clienthub}
       POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASS:-password}
+      POSTGRES_PASSWORD: ${DB_PASS:-postgres}
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=en_US.UTF-8"
     ports:
-      - "${DB_PORT:-5432}:5432"
+      - "${DB_PORT:-5433}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/01-init.sql
