--- a/client-hub-api/src/main/resources/application.properties
+++ b/client-hub-api/src/main/resources/application.properties
@@ -20,11 +20,13 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=OTHER
 spring.jpa.open-in-view=false
 
 # Flyway Database Migration
 spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=false
+spring.flyway.baseline-on-migrate=true
+spring.flyway.clean-disabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
