feat(audit): implement comprehensive audit logging system
- Add AuditLog entity with JSONB support for old/new values
- Add AuditAction enum with 16 action types (CREATE, UPDATE, DELETE, LOGIN, etc.)
- Implement AuditAspect with SpEL expression support for dynamic entity ID extraction
- Add AuditService with async logging and SHA-256 data hash generation
- Add AsyncConfig for @Async task execution with 10 threads pool
- Create migration V9 for audit_logs table with JSONB columns
- Add @LogAudit annotation for declarative audit logging

test:
- Add AuditAspectTest with SpEL parsing validation (3 tests)
- Add AuditServiceTest for hash generation and serialization (2 tests)
- Configure CoreTestConfiguration to exclude AOP/Service for @DataJpaTest
- Add TenantIsolationTestConfig for tenant filter testing
- Fix Java 25 compatibility with Byte Buddy experimental mode

fix:
- Set userId columnDefinition to 'uuid' in AuditLog entity
- Update maven-surefire-plugin with -Dnet.bytebuddy.experimental=true

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <groupId>com.clienthub</groupId>
     <artifactId>client-hub-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging> <!-- Quan trọng: Đánh dấu đây là dự án cha -->
+    <packaging>pom</packaging> 
     
     <name>client-hub-backend</name>
     <description>Modular Monolith Backend for Client Hub</description>
@@ -41,10 +41,8 @@
         <jjwt.version>0.12.6</jjwt.version>
     </properties>
 
-    <!-- Quản lý phiên bản tập trung -->
     <dependencyManagement>
         <dependencies>
-            <!-- Internal Modules -->
             <dependency>
                 <groupId>com.clienthub</groupId>
                 <artifactId>client-hub-common</artifactId>
@@ -61,7 +59,6 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <!-- External Libs -->
             <dependency>
                 <groupId>org.web3j</groupId>
                 <artifactId>core</artifactId>
@@ -78,7 +75,6 @@
                 <version>${springdoc.version}</version>
             </dependency>
             
-            <!-- JJWT (JWT Token Library) -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-api</artifactId>
@@ -100,13 +96,11 @@
     </dependencyManagement>
 
     <dependencies>
-        <!-- Lombok dùng chung cho tất cả module -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!-- Testing dùng chung -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -141,7 +135,6 @@
 
     <build>
         <plugins>
-            <!-- Compiler plugin với annotation processors -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -167,7 +160,14 @@
                     <release>${java.version}</release>
                 </configuration>
             </plugin>
-            <!-- Spotless format code tự động -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
