feat(ai): implement PDF-to-Task extraction with Ollama integration
- Add AiController endpoint POST /api/ai/extract-task-from-pdf
- Implement AiTaskService with Ollama LLM integration (llama3.2:3b)
- Add PdfExtractionService with 6-layer security validation
- Add MinioStorageService with tenant isolation (security-compliant)
- Configure Ollama AI and MinIO storage infrastructure
- Enable GPU support in Docker Compose
- Implements Feature AI Task Extraction

BREAKING CHANGE: Requires Docker with GPU support and Ollama model download

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,14 +38,19 @@ services:
     networks:
       - clienthub-network
     restart: unless-stopped
-    # GPU support - remove if no GPU available
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   pgadmin:
     image: dpage/pgadmin4
