--- a/client-hub-api/src/main/resources/application.properties
+++ b/client-hub-api/src/main/resources/application.properties
@@ -44,3 +44,13 @@ jwt.expiration=900000
 jwt.refresh-expiration=86400000
 # 24 hours in milliseconds
 app.jwt.refresh-expiration-ms=604800000
+
+# MinIO Configuration
+minio.url=${MINIO_URL:http://localhost:9000}
+minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
+minio.bucket-name=${MINIO_BUCKET_NAME:client-hub-files}
+
+# Ollama AI Configuration
+ai.ollama.url=${OLLAMA_URL:http://localhost:11434}
+ai.ollama.model=${OLLAMA_MODEL:llama3.2:3b}
