build(deps): update module dependencies for clean architecture
- Updated web/pom.xml: Added infrastructure and application dependencies
- Updated api/pom.xml: Replaced core with application/infrastructure (deprecated)
- Added <proc>none</proc> to all modules to disable annotation processing
- Added Spring Boot plugin to web module (executable JAR)

Resolves: Circular dependency between infrastructure and application
Resolves: TypeTag compiler errors with Java 21

--- a/client-hub-api/pom.xml
+++ b/client-hub-api/pom.xml
@@ -12,10 +12,14 @@
     <artifactId>client-hub-api</artifactId>
 
     <dependencies>
-        <!-- Kết nối Core và Web3 -->
+        <!-- Clean Architecture Layers -->
         <dependency>
             <groupId>com.clienthub</groupId>
-            <artifactId>client-hub-core</artifactId>
+            <artifactId>client-hub-application</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.clienthub</groupId>
+            <artifactId>client-hub-infrastructure</artifactId>
         </dependency>
         <dependency>
             <groupId>com.clienthub</groupId>
