refactor(domain): migrate to explicit tenant filtering in repositories
- Add explicit tenantId parameters to UserRepository custom queries (findByEmailCustom, countByRole)
- Replace implicit Hibernate @Filter with explicit WHERE tenantId = :tenantId clauses
- Update TaskRepositoryTest to use explicit tenant parameters
- Fix TestJpaConfig for domain test compatibility

Fixes: Hibernate filter limitations with custom JPQL queries

--- a/client-hub-domain/pom.xml
+++ b/client-hub-domain/pom.xml
@@ -48,6 +48,13 @@
             <groupId>io.hypersistence</groupId>
             <artifactId>hypersistence-utils-hibernate-63</artifactId>
         </dependency>
+
+        <!-- PostgreSQL Driver (needed for @DataJpaTest) -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
