--- a/client-hub-infrastructure/src/test/resources/application-test.properties
+++ b/client-hub-infrastructure/src/test/resources/application-test.properties
@@ -1,15 +1,23 @@
 # Test Profile
 
+# Database Configuration - Using Docker Compose PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5433/clienthub_test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=OTHER
 
 # Flyway 
 spring.flyway.enabled=true
 spring.flyway.clean-disabled=false
 spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
 # Logging
 logging.level.com.clienthub=DEBUG
