--- a/client-hub-web/src/test/resources/application-test.properties
+++ b/client-hub-web/src/test/resources/application-test.properties
@@ -4,7 +4,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=com.clienthub.core.config.CustomPostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=com.clienthub.infrastructure.config.CustomPostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Flyway 
