--- a/client-hub-infrastructure/src/test/resources/application-test.properties
+++ b/client-hub-infrastructure/src/test/resources/application-test.properties
@@ -1,23 +1,19 @@
-# Test Profile
+# Test Profile - Infrastructure Module Unit Tests
+# @DataJpaTest uses H2 in-memory database by default
+# Flyway migrations are PostgreSQL-specific, so we disable them for unit tests
 
-# Database Configuration - Using Docker Compose PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/clienthub_test
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database Configuration - H2 In-Memory (auto-configured by @DataJpaTest)
+# Tests use JPA DDL auto-generation instead of Flyway migrations
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=OTHER
 
-# Flyway 
-spring.flyway.enabled=true
-spring.flyway.clean-disabled=false
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
+# Flyway - DISABLED for unit tests (migrations are PostgreSQL-specific)
+spring.flyway.enabled=false
 
 # Logging
 logging.level.com.clienthub=DEBUG
